--- a/views/standings.jade
+++ b/views/standings.jade
@@ -34,6 +34,22 @@ block inlineScripts
 					pitchingCategories += ",";
 				}	
 			}
+			var beginDate = $('input[type="date"][name="begin"]').val();
+			var endDate = $('input[type="date"][name="end"]').val();
+			if(beginDate.length > 0) {
+				var hiddenField = document.createElement("input");
+				hiddenField.setAttribute("type", "hidden");
+				hiddenField.setAttribute("name", "beginDate");
+				hiddenField.setAttribute("value", beginDate);
+				form.appendChild(hiddenField);
+			}
+			if(endDate.length > 0) {
+				var hiddenField = document.createElement("input");
+				hiddenField.setAttribute("type", "hidden");
+				hiddenField.setAttribute("name", "endDate");
+				hiddenField.setAttribute("value", endDate);
+				form.appendChild(hiddenField);
+			}
 			var hiddenField = document.createElement("input");
 			hiddenField.setAttribute("type", "hidden");
 			hiddenField.setAttribute("name", "battingCategories");
@@ -48,14 +64,6 @@ block inlineScripts
 			form.submit();
 		}
 
-		var returnToDefault = function() {
-			var form = document.createElement("form");
-			form.setAttribute("method", "GET");
-			form.setAttribute("action", "/standings/default");
-			document.body.appendChild(form);
-			form.submit();
-		}
-
 block content
 
 	include partials/teamLink
@@ -64,8 +72,15 @@ block content
 	span.unselectable(style="padding-left:10px")= "Last Updated: " + moment(teamsWithPoints[0].stats.lastUpdated).format('MMMM Do YYYY, h:mm:ss a')
 	div.widget
 		h2 Stats
+		| Begin: 
+		input(type="date" name="begin")
+		| End:
+		input(type="date" name="end")
 		input(type="button" onclick="submitStandings()" value="Customize Standings")
-		input(type="button" onclick="returnToDefault()" value="Return to Default")
+		form(method="GET" action="/standings/default")
+			input(type="submit" value="Return to Default")
+		p= dates.beginDate
+		p= dates.endDate
 		table.hoverable#stats(style="width:100%")
 			thead
 				th.sortableHeader(style="text-align:left")
@@ -179,7 +194,7 @@ block content
 					span Team
 				-each category in includedCategories
 					th.sortableHeader(style="text-align:right")
-						-var catName = category.id
+						-var catName = category.display
 						span= catName.toUpperCase()
 				th.sortableHeader(style="text-align:right")
 					span Total
